# mediapipe-coral-object-detection

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  mediapipe_object_detection_learning.py  requirements.txt  settings.py
core/: export.py  hyp_optimizer.py  mediapipe_object_detection_learning.py  train.py
firmware/object-detection/: CMakeLists.txt  main.cc
hyperparameters/: hyp_optimizer.py
libs/classifier_extended/: classifier_extended.py
libs/object_detector_extended/: __init__.py  object_detector_extended.py
tools/: extract_dataset.py  extract_samples_fiftyone.py  filter_labels_pascal_voc.py
